# html2mcq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  check_keys.py  check_openrouter_free.py  find_model.py  generator.py  html2mcq_gui.py  html2mcq_web.py  mcq_token_test_10q.json  mcq_token_test_10q_compact.json  mcq_token_test_10q_no_explanation.json  model_test_results.json  pyproject.toml  quality_compare_explanations_normal.json  quality_compare_gemini_onestep_vs_twostep.json  quick_test.py  quick_test2.py  retest_working.py  run.bat  test_all_models.py  test_groq.py  test_live.py  test_max_q.py  test_max_q2.py  test_models.py  test_models_progress.py  test_openrouter_free.py
examples/: basic_usage.py
html2mcq/: __init__.py  cli.py  extractor.py  generator.py  image_ocr.py  models.py  pdf.py  prompts.py  video.py
tests/: test_html2mcq.py
tests/scripts/: test_app_smoke.py  test_live.py  test_playwright_web.py  test_web_smoke.py
