[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "html2mcq"
version = "1.3.0"
description = "Convert any HTML tutorial page into MCQ questions using AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["mcq", "quiz", "ai", "education", "html", "tutorial", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "anthropic>=0.25",
    "openai>=1.30",
    "youtube-transcript-api>=0.6",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
docling   = ["docling>=2.0"]
dev       = ["pytest>=7", "pytest-cov", "black", "ruff", "build", "twine"]

[project.scripts]
html2mcq = "html2mcq.cli:main"

[project.urls]
Homepage = "https://github.com/manjur-ai/html2mcq"
Issues   = "https://github.com/manjur-ai/html2mcq/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["html2mcq*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
