[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2mcq"
version = "3.3.11"
description = "Convert any HTML tutorial page, PDF, or image into MCQ questions using AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["mcq", "quiz", "ai", "education", "html", "pdf", "image", "ocr", "tutorial", "llm", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "anthropic>=0.25",
    "openai>=1.30",
    "pymupdf>=1.24",
    "Pillow>=10.0",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
docling   = ["docling>=2.0"]
dev       = ["pytest>=7", "pytest-cov", "black", "ruff", "build", "twine"]

[project.scripts]
html2mcq = "html2mcq.cli:main"

[project.urls]
Homepage = "https://github.com/manjur-ai/html2mcq"
Issues   = "https://github.com/manjur-ai/html2mcq/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["html2mcq*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts"]
